[package]
name = "xlayer-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "XLayer consensus-layer glue — XLayerAA (EIP-8130) build + gas-schedule; wire types re-exported from op-alloy."

[lints]
workspace = true

[dependencies]
# alloy-primitives — basic primitive types (B256, U256, Address) used by
# build.rs. `k256` is needed transitively through op-alloy-consensus's k1
# verifier path; we request it here so standalone `cargo check -p
# xlayer-consensus` picks it up.
alloy-primitives = { workspace = true, default-features = false, features = ["k256"] }

# op-alloy-consensus — host for the vendored `eip8130` module. All wire
# types + native verifiers live here; xlayer-consensus simply re-exports.
# `k256` is required so the `k1_recover` native path is available.
op-alloy-consensus = { workspace = true, default-features = false, features = ["k256"] }

# op-revm — needed only for `OpSpecId`, the fork discriminator threaded
# through the gas schedule.
op-revm = { workspace = true, default-features = false }

# xlayer-revm — `XLayerAAParts` is the exec-env handoff type build_aa_parts
# returns. `default-features = false` keeps this no_std-clean.
xlayer-revm = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "alloy-primitives/std",
    "op-alloy-consensus/std",
    "op-revm/std",
    "xlayer-revm/std",
]
serde = ["alloy-primitives/serde", "op-alloy-consensus/serde"]
# Kept for API compatibility with downstream crates that previously set
# `features = ["reth-codec"]` or `features = ["serde-bincode-compat"]`
# expecting the envelope Compact impl. Those lived in the removed
# `envelope.rs`; the envelope is now plain `OpTxEnvelope` from op-alloy,
# which carries its own Compact impl through `reth-codecs/op`. The
# features are now no-ops so existing Cargo.toml lines continue to
# build without modification.
reth-codec = []
serde-bincode-compat = []
