[package]
name = "xlayer-revm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "XLayer revm extensions — XLayerAA (EIP-8130) transaction support as a decorator over op-revm"

[lints]
workspace = true

[dependencies]
# revm core
revm = { workspace = true, default-features = false }
op-revm = { workspace = true, default-features = false }

# sol! bindings for precompile interfaces & ABI encoding
alloy-sol-types = { workspace = true, default-features = false }

# misc
auto_impl = "1"
serde = { workspace = true, features = ["derive", "rc"], optional = true }

[dev-dependencies]
# Enable `disable_base_fee` / estimation flags for handler tests.
revm = { workspace = true, default-features = false, features = ["optional_no_base_fee"] }

[features]
default = ["std"]
std = [
    "alloy-sol-types/std",
    "op-revm/std",
    "revm/std",
    "serde?/std",
]
serde = [
    "dep:serde",
    "op-revm/serde",
    "revm/serde",
]
