[package]
name = "xlayer-revm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "XLayer revm extensions — XLayerAA (EIP-8130) transaction support as a decorator over op-revm"

[lints]
workspace = true

[dependencies]
# revm core
revm = { workspace = true, default-features = false }
op-revm = { workspace = true, default-features = false }

# alloy-evm provides the `EvmFactory` / `Evm` traits the node plugs into.
alloy-evm = { workspace = true, default-features = false }
alloy-op-evm = { workspace = true, default-features = false }
alloy-primitives = { workspace = true, default-features = false }
op-alloy-consensus = { workspace = true, default-features = false }

# `reth_evm::TransactionEnv` — pulled in so downstream node code can treat
# `XLayerAATransaction<T>` as a reth-compatible tx env. `reth-optimism-evm`
# supplies the `OpTx` newtype we delegate wire→exec conversions to.
reth-evm = { workspace = true, default-features = false }
reth-optimism-evm = { workspace = true, default-features = false }

# sol! bindings for precompile interfaces & ABI encoding
alloy-sol-types = { workspace = true, default-features = false }

# misc
auto_impl = "1"
serde = { workspace = true, features = ["derive", "rc"], optional = true }

[dev-dependencies]
# Enable `disable_base_fee` / estimation flags for handler tests.
revm = { workspace = true, default-features = false, features = ["optional_no_base_fee"] }

[features]
default = ["std"]
std = [
    "alloy-evm/std",
    "alloy-op-evm/std",
    "alloy-primitives/std",
    "alloy-sol-types/std",
    "op-alloy-consensus/std",
    "op-revm/std",
    "reth-evm/std",
    "revm/std",
    "serde?/std",
]
serde = [
    "dep:serde",
    "op-revm/serde",
    "revm/serde",
]
